@@ -1136,6 +1136,7 @@ YourCompanyDoesNotUseVAT=Your company has been defined to not use VAT (Home - Se
 ##### Agenda #####
 AgendaSetup=Actions and agenda module setup
 PasswordTogetVCalExport=Key to authorize export link
+PastDelayVCalExport=Do not export event older than
 ##### ClickToDial #####
 ClickToDialDesc=This module allows to add an icon after the phone number of Dolibarr contacts. A click on this icon, will call a serveur with a particular URL you define below. This can be used to call a call center system from Dolibarr that can call the phone number on a SIP system for example.
 ##### Point Of Sales (CashDesk) #####
